# MusicalEarTrainer

./: .gitignore  README.md  config.json.example  manage.py  pyproject.toml
MusicalEarTrainer/: asgi.py  settings.py  urls.py  views.py  wsgi.py
catalog/: admin.py  forms.py  models.py  possible_answers.py  urls.py  views.py
catalog/migrations/: 0001_initial.py
catalog/static/catalog/: styles.css
catalog/static/exercise/: main.js  styles.css
catalog/static/home/: main.js  styles.css
catalog/templates/catalog/: catalog.html  exercise.html  task.html
templates/: home.html
