[tool.poetry]
name = "musicaleartrainer"
version = "0.1.0"
description = ""
authors = ["ayfokin <ayfokin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "3.0.0"
psycopg2 = "2.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
